--- a/templates/home.html
+++ b/templates/home.html
@@ -93,6 +93,7 @@
             
                
             {% for f in flashs%}
+            <a href="/product/{{f.slug}}">
                 <div class="flex-none w-36 md:w-64">
                     <div class="bg-white rounded-lg overflow-hidden shadow-lg">
                         <img src="{{f.product.featured_image.url}}" alt="{{f.product.name}}" class="w-full h-36 md:h-52 object-cover">
@@ -102,6 +103,7 @@
                         </div>
                     </div>
                 </div>
+            </a>
 
             {% endfor %}
             </div>
@@ -186,7 +188,7 @@
         <div class="overflow-x-auto hide-scrollbar" x-ref="container">
             <div class="flex gap-4">
             {% for product in products %}
-            <a href="/{product.slug}">
+            <a href="/product/{{product.slug}}">
                 <div class="flex-none w-36 md:w-64">
                     <div class="bg-white rounded-lg overflow-hidden">
                         <img src="{{product.featured_image.url}}" alt="Denso Cool Gear Cabin Filter" class="w-full h-36 md:h-52 object-cover">
