--- a/templates/cart.html
+++ b/templates/cart.html
@@ -4,7 +4,7 @@
 {% block body %}
         <h1 class="text-3xl font-bold mb-8">Your Cart</h1>
 
-        <div class="grid grid-cols-1 lg:grid-cols-3 gap-8">
+        <div x-data="cartPage()" class="grid grid-cols-1 lg:grid-cols-3 gap-8">
             <div class="lg:col-span-2">
                 <div class="bg-white rounded-lg shadow-md p-6 mb-6">
                     <template x-for="(item, index) in cartItems" :key="index">
@@ -73,7 +73,7 @@
                 </div>
             </div>
         </div>
-    </main>
+    
 
     <script>
 
